# shame

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
examples/: README.md
examples/api_showcase/: Cargo.toml
examples/api_showcase/src/: compute_pipeline.rs  control_flow.rs  functions_example.rs  known_surprising_behavior.rs  main.rs  mirror_example.rs  readme_example.rs  render_pipeline.rs  simple_render_pipeline.rs  structs_example.rs  vec_matrix_example.rs
examples/hello_triangles/: Cargo.toml
examples/hello_triangles/src/: app.rs  gpu.rs  hello_triangles.rs  main.rs
examples/hello_triangles/src/util/: mod.rs  shame_glam.rs  winit_helpers.rs
examples/hot_reload_engine/: Cargo.toml
examples/hot_reload_engine/src/: listen_for_shader.rs  main.rs
examples/hot_reload_shaders/: Cargo.toml
examples/hot_reload_shaders/src/: lib.rs  main.rs  render_pipeline.rs
examples/shame_wgpu/: Cargo.toml
examples/shame_wgpu/src/: bind_group.rs  binding.rs  conversion.rs  lib.rs  surface_format.rs  texture_view.rs
examples/simple_wgpu/: Cargo.toml
examples/simple_wgpu/src/: glue.rs  lib.rs  main.rs  render_pipeline.rs
examples/type_layout/: Cargo.toml
examples/type_layout/src/: main.rs
examples/vertex_buffer/: Cargo.toml
examples/vertex_buffer/src/: main.rs
shame/: Cargo.toml
shame/src/: assert.rs  keep_idents.rs  lib.rs  mirror.rs  prelude.rs  prettify.rs  wrappers.rs
shame/src/backend/: code_write_buf.rs  language.rs  mod.rs  shader_code.rs  shader_context.rs
shame/src/backend/wgsl/: error.rs  mod.rs  syntax_highlight.rs  write_builtin_templates.rs  write_node.rs  write_shader_io.rs  write_texture_format.rs  write_type.rs
shame/src/common/: floating_point.rs  format.rs  ignore_eq.rs  integer.rs  iterator_ext.rs  marker.rs  mod.rs  ops.rs  option_ext.rs  po2.rs  pool.rs  prettify.rs  proc_macro_reexports.rs  proc_macro_utils.rs  small_vec_actual.rs  small_vec_dummy.rs
shame/src/frontend/: error.rs  mod.rs
shame/src/frontend/any/: blend.rs  flow_builders.rs  fn_builder.rs  mod.rs  render_io.rs  shared_io.rs
shame/src/frontend/encoding/: binding.rs  buffer.rs  buffer_op.rs  color_target.rs  features.rs  fill.rs  flow.rs  fragment_test.rs  io_iter.rs  io_iter_dynamic.rs  mask.rs  mod.rs  pipeline_info.rs  rasterizer.rs
shame/src/frontend/rust_types/: aliases.rs  array.rs  atomic.rs  barrier.rs  constructors.rs  error.rs  index.rs  layout_traits.rs  len.rs  mat.rs  mat_operators.rs  mem.rs  mod.rs  packed_vec.rs  reference.rs  scalar_type.rs  struct_.rs  type_layout.rs  type_traits.rs  vec.rs  vec_functions.rs  vec_operators.rs  vec_range.rs  vec_range_traits.rs
shame/src/frontend/rust_types/type_layout/: builder.rs  compatible_with.rs  construction.rs  display.rs  eq.rs  mod.rs  storage_uniform.rs  vertex.rs
shame/src/frontend/rust_types/type_layout/cpu_shareable/: align_size.rs  builder.rs  mod.rs
shame/src/frontend/rust_types/type_layout/layoutable/: align_size.rs  builder.rs  ir_compat.rs  mod.rs  to_layout.rs
shame/src/frontend/rust_types/type_layout/recipe/: align_size.rs  builder.rs  ir_compat.rs  mod.rs  to_layout.rs
shame/src/frontend/texture/: mod.rs  storage_texture.rs  texture_array.rs  texture_format_table_generator.rs  texture_formats.rs  texture_formats_old.rs  texture_traits.rs
shame/src/ir/: mod.rs
shame/src/ir/expr/: alloc.rs  assign.rs  builtin_fn.rs  builtin_numeric_fn.rs  builtin_texture_fn.rs  decomposition.rs  fn_related.rs  literal.rs  mod.rs  operation.rs  operator.rs  pipeline_io_expr.rs  shader_io_expr.rs  type_check.rs
shame/src/ir/ir_type/: align_size.rs  canon_name.rs  categories.rs  layout_constraints.rs  memory_view.rs  mod.rs  struct_.rs  tensor.rs  texture.rs  texture_new.rs  ty.rs
shame/src/ir/pipeline/: infer_stage.rs  mod.rs  shader_stage.rs  stage_solver.rs  wip_pipeline.rs
shame/src/ir/recording/: allocation.rs  block.rs  block_recorder.rs  builtin_templates.rs  call_info.rs  context.rs  function_def.rs  ident.rs  mod.rs  node.rs  pools.rs  stmt.rs  thread_local.rs  time.rs
shame/src/pipeline/: blending.rs  compute_pipeline.rs  compute_pipeline_info.rs  culling.rs  mod.rs  pipeline_io.rs  pixel_format.rs  primitive_ext.rs  render_pipeline.rs  render_pipeline_info.rs  target.rs  topology.rs
shame/src/rec/: aliases.rs  array.rs  constructors.rs  control_flow.rs  dtype.rs  fields.rs  functions.rs  mod.rs  multi.rs  operators.rs  rec.rs  sampler_texture.rs  shape.rs  stage.rs  struct_.rs  swizzle.rs  ten.rs  texture_combined_sampler.rs  write_only.rs
shame/src/shader/: features.rs  mod.rs  primitive.rs
shame/tests/: compute_pipeline.rs  render_pipeline.rs  test_derived_traits.rs  test_layout.rs  test_operators.rs  test_run_pipeline.rs
shame/tests/common/: buffer_mapping.rs  gpu.rs  mod.rs  test_image.rs  wgpu_error_scope.rs
shame_derive/: Cargo.toml
shame_derive/src/: derive_fields.rs  derive_layout.rs  keep_idents.rs  lib.rs  mirror.rs  util.rs
shame_graph/: Cargo.toml
shame_graph/src/: any.rs  context.rs  error.rs  lib.rs  pool.rs  prettify.rs
shame_graph/src/common/: mod.rs  shorthands.rs
shame_graph/src/expr/: block.rs  deduce.rs  expr.rs  expr_kind.rs  glsl_builtin_fns.rs  glsl_builtin_vars.rs  glsl_generics.rs  glsl_invalid_idents.rs  glsl_output.rs  glsl_spec_macro.rs  ident.rs  interface.rs  item.rs  location_iter.rs  mod.rs  sampler.rs  stage.rs  stmt.rs  tensor.rs  ty.rs
