[package]
name = "shame"
version = "1.0.1"
authors = ["RayMarch <RayMarch@users.noreply.github.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "shame"

[features]
default = ["enable_unsafe_features"]
enable_unsafe_features = []
workarounds = ["shame_graph/workarounds"]
mirror = ["bytemuck", "shame_derive/mirror"]

[dependencies]
thiserror = "1.0.26"
shame_graph = { path = "../shame_graph/" }
shame_derive = { path = "../shame_derive/" }
bytemuck = { version = "1.9.1", optional = true, features = [ "derive" ]}
