[package]
name = "shame_derive"
version = "2.0.0-beta.0"
authors = ["RayMarch <RayMarch@users.noreply.github.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"

[lib]
name = "shame_derive"
proc-macro = true
doctest = false # TODO(release) remove, and fix documentation to pass tests

[dependencies]
proc-macro2 = "1.0"
syn = {version="2.0.100", features=["full"]} #TODO(release) make this more lightweight by not using "full"?
quote = "1.0"
