[package]
name = "api_showcase"
version = "0.1.0"
authors = ["RayMarch <RayMarch@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shame = { path = "../../shame/", features = ["mirror", "workarounds"] }
bytemuck = { version = "1.9.1", features = ["derive"] }