[package]
name = "hello_triangles"
version = "0.1.0"
edition = "2024"

[dependencies]
shame_wgpu = { path = "../shame_wgpu" }
shame = { path = "../../shame" }
wgpu = "25.0.0"
bytemuck = { version = "1.19", features = ["derive"] }
glam = { version = "0.30.2", features = ["bytemuck", "cuda"] } # "cuda" for 8-byte aligned Vec2
winit = "0.30.9"
pollster = "0.4"
thiserror = "2.0.12"
