[package]
name = "hot_reload_engine"
version = "0.1.0"
authors = ["RayMarch <RayMarch@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shame = { path = "../../shame/", features = ["mirror"] }
bytemuck = { version = "1.12", features = ["derive"] }
hot_reload_shaders = { path = "../hot_reload_shaders/" }
simple_wgpu = { path = "../simple_wgpu/" }
wgpu = { version = "0.13.1", features = ["glsl"]}
naga = "0.9"
winit = "0.27"
async-executor = "1.4"
pollster = "0.2"
env_logger = "0.9"