[package]
name = "hot_reload_shaders"
version = "0.1.0"
authors = ["RayMarch <RayMarch@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "hot_reload_shaders_lib"
path = "src/lib.rs"

[[bin]]
name = "hot_reload_shaders"
path = "src/main.rs"

[dependencies]
shame = { path = "../../shame/", features = ["mirror"] }
bytemuck = "1.9.1"